--- a/templates/fstab.j2
+++ b/templates/fstab.j2
@@ -2,7 +2,7 @@
 #>> This file is managed by Ansible - changes made here will be overwritten. <<#
 ################################################################################
 #
-# {{ fstab_path }}: static file system information.
+# {{ mounts_fstab_path }}: static file system information.
 #
 # Use 'blkid' to print the universally unique identifier for a
 # device; this may be used with UUID= as a more robust way to name devices
@@ -11,38 +11,38 @@
 # <file system> <mount point>   <type>  <options>       <dump>  <pass>
 
 ###### Core mount points necessary for the system to boot
-{% for drive in drives_boot %}
-UUID={{ drive.uuid }} {{ drive.mount_point }} {{ drive.type }} {{ drive.options }} {{ drive.dump }} {{ drive.pass }}
+{% for mount in mounts_boot %}
+UUID={{ mount.uuid }} {{ mount.mount_point }} {{ mount.type }} {{ mount.options }} {{ mount.dump }} {{ mount.pass }}
 {% endfor %}
 
-{% if cryptdisks_mount is defined %}
-###### Important mountpoint necessary for unlocking any encrypted drives
-{% if cryptdisks_mount.uuid is defined %}
-UUID={{ cryptdisks_mount.uuid }} {{ cryptdisks_mount.mount_point }} {{ cryptdisks_mount.type }} {{ cryptdisks_mount.options | default('defaults,nofail') }} {{ cryptdisks_mount.dump | default('0') }} {{ cryptdisks_mount.pass | default('2') }}
-{% elif cryptdisks_mount.net_path is defined %}
-{{ cryptdisks_mount.net_path }} {{ cryptdisks_mount.mount_point }} {{ cryptdisks_mount.type }} {% if cryptdisks_mount.net_credentials.path is defined %}credentials={{ cryptdisks_mount.net_credentials.path }},{% endif %}{{ cryptdisks_mount.options | default('_netdev,nofail') }} {{ cryptdisks_mount.dump | default('0') }} {{ cryptdisks_mount.pass | default('0') }}
+{% if mounts_cryptdisks is defined %}
+###### Important mountpoint necessary for unlocking any encrypted mounts
+{% if mounts_cryptdisks.uuid is defined %}
+UUID={{ mounts_cryptdisks.uuid }} {{ mounts_cryptdisks.mount_point }} {{ mounts_cryptdisks.type }} {{ mounts_cryptdisks.options | default('defaults,nofail') }} {{ mounts_cryptdisks.dump | default('0') }} {{ mounts_cryptdisks.pass | default('2') }}
+{% elif mounts_cryptdisks.net_path is defined %}
+{{ mounts_cryptdisks.net_path }} {{ mounts_cryptdisks.mount_point }} {{ mounts_cryptdisks.type }} {% if mounts_cryptdisks.net_credentials.path is defined %}credentials={{ mounts_cryptdisks.net_credentials.path }},{% endif %}{{ mounts_cryptdisks.options | default('_netdev,nofail') }} {{ mounts_cryptdisks.dump | default('0') }} {{ mounts_cryptdisks.pass | default('0') }}
 {% endif %}
 {% endif %}
 
-{% if drives_normal is defined and drives_normal|length > 0 %}
-###### Additional normal drives
-{% for drive in drives_normal %}
-{% if drive.comment is defined %}# {{ dive.comment }}{% endif %}
-UUID={{ drive.uuid }} {{ drive.mount_point }} {{ drive.type | default('ext4') }} {{ drive.options | default('defaults,nofail') }} {{ drive.dump | default('0') }} {{ drive.pass | default('2') }}
-{% endfor %}
-{% endif %}
-
-{% if drives_encrypted is defined and drives_encrypted|length > 0 %}
-###### Additional encrypted drives
-{% for drive in drives_encrypted %}
-{% if drive.fstab.comment is defined %}# {{ dive.fstab.comment }}{% endif %}
-/dev/mapper/{{ drive.label }} {{ drive.mount_point }} {{ drive.fstab.type | default('ext4') }} {{ drive.fstab.options | default('defaults,nofail') }} {{ drive.fstab.dump | default('0') }} {{ drive.fstab.pass | default('2') }}
+{% if mounts_normal is defined and mounts_normal|length > 0 %}
+###### Additional normal mounts
+{% for mount in mounts_normal %}
+{% if mount.comment is defined %}# {{ mount.comment }}{% endif %}
+UUID={{ mount.uuid }} {{ mount.mount_point }} {{ mount.type | default('ext4') }} {{ mount.options | default('defaults,nofail') }} {{ mount.dump | default('0') }} {{ mount.pass | default('2') }}
 {% endfor %}
 {% endif %}
 
-{% if drives_pooled is defined and drives_pooled|length > 0 %}
+{% if mounts_encrypted is defined and mounts_encrypted|length > 0 %}
+###### Additional encrypted mounts
+{% for mount in mounts_encrypted %}
+{% if mount.fstab.comment is defined %}# {{ mount.fstab.comment }}{% endif %}
+/dev/mapper/{{ mount.label }} {{ mount.mount_point }} {{ mount.fstab.type | default('ext4') }} {{ mount.fstab.options | default('defaults,nofail') }} {{ mount.fstab.dump | default('0') }} {{ mount.fstab.pass | default('2') }}
+{% endfor %}
+{% endif %}
+
+{% if mounts_pooled is defined and mounts_pooled|length > 0 %}
 ###### Drive pools
-{% for pool in drives_pooled %}
+{% for pool in mounts_pooled %}
 {% if pool.comment is defined %}# {{ pool.comment }}{% endif %}
 {{ pool.branches|join(':') }} {{ pool.mount_point }} fuse.mergerfs {% if pool.name is defined and pool.name != '' %}fsname={{ pool.name }},{% endif %}{{ pool.options | default('defaults,allow_other,use_ino') }} {{ pool.dump | default('0') }} {{ pool.pass | default('0') }}
 {% endfor %}
