--- a/templates/smbcredentials.j2
+++ b/templates/smbcredentials.j2
@@ -1,5 +1,5 @@
 ################################################################################
 #>> This file is managed by Ansible - changes made here will be overwritten. <<#
 ################################################################################
-username={{ cryptdisks_mount.net_credentials.username }}
-password={{ cryptdisks_mount.net_credentials.password }}
+username={{ mounts_cryptdisks.net_credentials.username }}
+password={{ mounts_cryptdisks.net_credentials.password }}
