--- a/templates/crypttab.j2
+++ b/templates/crypttab.j2
@@ -7,7 +7,7 @@
 # <target name>	<source device>		<key file>	<options>
 
 {% if mounts_encrypted is defined %}
-###### Encrypted drives and their un-encrypted mount points
+###### Encrypted drives and their decrypted mount points
 {% for mount in mounts_encrypted %}
 {% if mount.crypttab.comment is defined %}# {{ mount.crypttab.comment }}{% endif %}
 {{ mount.label }} /dev/disk/by-uuid/{{ mount.uuid }} {{ mount.crypttab.key_file }} {{ mount.crypttab.options | default('luks,nofail') }}
