--- a/templates/fstab.j2
+++ b/templates/fstab.j2
@@ -10,13 +10,13 @@
 #
 # <file system> <mount point>   <type>  <options>       <dump>  <pass>
 
-###### Core mount points necessary for the system to boot
+###### Boot Mounts - Mount points necessary for the system to boot
 {% for mount in mounts_boot %}
 UUID={{ mount.uuid }} {{ mount.mount_point }} {{ mount.type }} {{ mount.options }} {{ mount.dump }} {{ mount.pass }}
 {% endfor %}
 
 {% if mounts_cryptdisks is defined %}
-###### Important mountpoint necessary for unlocking any encrypted mounts
+###### Cryptdisk Mount - Important mountpoint necessary for unlocking any encrypted mounts
 {% if mounts_cryptdisks.uuid is defined %}
 UUID={{ mounts_cryptdisks.uuid }} {{ mounts_cryptdisks.mount_point }} {{ mounts_cryptdisks.type }} {{ mounts_cryptdisks.options | default('defaults,nofail') }} {{ mounts_cryptdisks.dump | default('0') }} {{ mounts_cryptdisks.pass | default('2') }}
 {% elif mounts_cryptdisks.net_path is defined %}
@@ -25,7 +25,7 @@ UUID={{ mounts_cryptdisks.uuid }} {{ mounts_cryptdisks.mount_point }} {{ mounts_
 {% endif %}
 
 {% if mounts_normal is defined and mounts_normal|length > 0 %}
-###### Additional normal mounts
+###### Normal Mounts - Noting fancy about these drives
 {% for mount in mounts_normal %}
 {% if mount.comment is defined %}# {{ mount.comment }}{% endif %}
 UUID={{ mount.uuid }} {{ mount.mount_point }} {{ mount.type | default('ext4') }} {{ mount.options | default('defaults,nofail') }} {{ mount.dump | default('0') }} {{ mount.pass | default('2') }}
@@ -33,7 +33,7 @@ UUID={{ mount.uuid }} {{ mount.mount_point }} {{ mount.type | default('ext4') }}
 {% endif %}
 
 {% if mounts_encrypted is defined and mounts_encrypted|length > 0 %}
-###### Additional encrypted mounts
+###### Encrypted Mounts - The mount points for the decrypted drives
 {% for mount in mounts_encrypted %}
 {% if mount.fstab.comment is defined %}# {{ mount.fstab.comment }}{% endif %}
 /dev/mapper/{{ mount.label }} {{ mount.mount_point }} {{ mount.fstab.type | default('ext4') }} {{ mount.fstab.options | default('defaults,nofail') }} {{ mount.fstab.dump | default('0') }} {{ mount.fstab.pass | default('2') }}
@@ -41,7 +41,7 @@ UUID={{ mount.uuid }} {{ mount.mount_point }} {{ mount.type | default('ext4') }}
 {% endif %}
 
 {% if mounts_pooled is defined and mounts_pooled|length > 0 %}
-###### Drive pools
+###### Drive Pools - Multiple mount points that are combined into a single location
 {% for pool in mounts_pooled %}
 {% if pool.comment is defined %}# {{ pool.comment }}{% endif %}
 {{ pool.branches|join(':') }} {{ pool.mount_point }} fuse.mergerfs {% if pool.name is defined and pool.name != '' %}fsname={{ pool.name }},{% endif %}{{ pool.options | default('defaults,allow_other,use_ino') }} {{ pool.dump | default('0') }} {{ pool.pass | default('0') }}
