--- a/templates/crypttab.j2
+++ b/templates/crypttab.j2
@@ -10,6 +10,6 @@
 ###### Encrypted drives and their decrypted mount points
 {% for mount in mounts_encrypted %}
 {% if mount.crypttab.comment is defined %}# {{ mount.crypttab.comment }}{% endif %}
-{{ mount.label }} /dev/disk/by-uuid/{{ mount.uuid }} {{ mount.crypttab.key_file }} {{ mount.crypttab.options | default('luks,nofail') }}
+{{ mount.name | default(mount.uuid) }} /dev/disk/by-uuid/{{ mount.uuid }} {{ mount.crypttab.key_file }} {{ mount.crypttab.options | default('luks,nofail') }}
 {% endfor %}
 {% endif %}
